@@ -52,7 +52,7 @@
 #include "semaphore.h"
 #include "implement.h"
 
-static void
+static inline void
 ptw32_sem_timedwait_cleanup (void * sem)
 {
   sem_t s = (sem_t) sem;
@@ -60,6 +60,7 @@ ptw32_sem_timedwait_cleanup (void * sem)
   if (pthread_mutex_lock (&s->lock) == 0)
     {
       s->value++;
+      ReleaseSemaphore(s->sem, 1, 0);
       (void) pthread_mutex_unlock (&s->lock);
     }
 }
@@ -211,13 +212,13 @@ sem_timedwait (sem_t * sem, const struct timespec *abstime)
 	      /* Must wait */
               pthread_cleanup_push(ptw32_sem_timedwait_cleanup, s);
 	      result = pthreadCancelableTimedWait (s->sem, milliseconds);
-              pthread_cleanup_pop(0);
-	      if (result != 0
-		  && pthread_mutex_lock (&s->lock) == 0)
-		{
-		  s->value++;
-		  (void) pthread_mutex_unlock (&s->lock);
-		}
+	      /*
+	       * Restore the semaphore counters if no longer waiting
+	       * and not taking the semaphore. This will occur if the
+	       * thread is cancelled while waiting, or the wake was
+	       * not the result of a post event given to us, e.g. a timeout.
+	       */
+              pthread_cleanup_pop(result);
 	    }
 	}
 
