@@ -1,3 +1,9 @@
+2004-10-23  Ross Johnson  <ross@localhost.localdomain>
+
+	* sem_timedwait.c (ptw32_sem_timedwait_cleanup): Release
+	Win32 semaphore.
+	sem_wait.c (ptw32_sem_wait_cleanup): Likewise.
+
 2004-10-22  Ross Johnson  <rpj at callisto.canberra.edu.au>
 
 	* sem_init.c (sem_init): Introduce a 'lock' element in order to
